<resources>
    <string-array name="language">
        <item>English</item>
        <item>中文</item>
    </string-array>

    <!--Main screen-->
    <string name="language">Language</string>

    <string name="steps">steps</string>
    <string name="meters">meters</string>
    <string name="calories_burned">Calories burned</string>
    <string name="tap_on_the_microphone_and_speak">Tap on the microphone and speak</string>
    <string name="tap_on_the_camera_to_start">Tap on the camera icon to start</string>
    <string name="tap_on_the_pen_to_start">Tap on the pen icon to start</string>
    <string name="lang_off">Language: Chinese</string>
    <string name="lang_on">Language: English</string>
    <string name="history">History</string>
    <string name="please_try_speaking_again">Please try speaking again!</string>
    <string name="please_check_your_internet_connection">Please check your Internet connection!</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="no_matches_found">No matches found!</string>
    <string name="please_repeat">Please repeat</string>
    <string name="score">Score</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="name_cannot_be_blank">Name cannot be blank</string>
    <string name="flashcards">Flashcards</string>
    <string name="show_original_text_first">Show original text first</string>
    <string name="show_translated_text_first">Show translated text first</string>
    <string name="start">Start</string>
    <string name="listening">Listening</string>
    <string name="recognizing">Recognizing...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="type_text">Type text</string>
    <string name="edit">Edit</string>
    <string name="hi">Hi</string>
    <string name="help">Help</string>
    <string name="flashcard">Flashcard</string>
    <string name="note">Note</string>
    <string name="photo">Photo</string>
    <string name="practice">Practice</string>
    <string name="listen">Listen</string>
    <string name="tag">Tag</string>

    <!--Maps screen-->
    <string name="maps">Maps</string>
    <string name="grouped">Grouped</string>
    <string name="items">ITEMS</string>

    <!--History screen-->
    <string name="view_shared">View shared</string>
    <string name="detail">Detail</string>
    <string name="translated">Translated</string>
    <string name="pedometer">Pedometer</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>

    <!--Flashcard screen-->
    <string name="study">Study</string>
    <string name="game_matching">Game "Matching"</string>
    <string name="game_true_false">Game "True/False"</string>
    <string name="game_multichoice">Game "Multiple Choice"</string>
    <string name="game_written">Game "Written"</string>
    <string name="game_multiplayer">Game "2 player"</string>
    <string name="all_your_flashcard">All your flashcards</string>
    <string name="you_dont_have_any_flashcard">You don\'t have any flashcard</string>
    <string name="shuffle">Shuffle</string>
    <string name="got_it">Got it</string>
    <string name="missed">Missed</string>
    <string name="life">Life</string>
    <string name="answer">Answer</string>
    <string name="tut_multiplayer1">Try your best to answer</string>
    <string name="tut_multiplayer2">True/False questions. If you get it right, you get the point. Otherwise, your opponent gets that point.</string>
    <string name="lets_go">Let\'s go</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try again</string>
    <string name="often_missed">Often missed</string>
    <string name="sometimes_missed">Sometimes missed</string>
    <string name="seldom_missed">Seldom missed</string>
    <string name="never_missed">Never missed</string>
    <string name="no_answer_yet">No answer yet</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="need_4_flashcard">You need to have at least 4 flashcards to play this game</string>
    <string name="need_2_flashcard">You need to have at least 2 flashcards to play this game</string>
    <string name="need_1_flashcard">You need to have at least 1 flashcards to play this game</string>

    <!--Homework screen-->
    <string name="homework">Homework</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="uploading">Uploading...</string>
    <string name="select_words">Select words</string>
    <string name="pretest">Pre Test</string>
    <string name="posttest">Post Test</string>

    <!--Settings screen-->
    <string name="settings">Settings</string>
    <string name="translate">Translate</string>
    <string name="auto">Auto </string>
    <string name="enable_pedometer">Enable pedometer</string>
    <string name="your_name">Your name:</string>

    <!--More info screen-->
    <string name="more_info">More info</string>
    <string name="delete">Delete</string>
    <string name="created_location">Created location:</string>
    <string name="downloading">Downloading</string>
    <string name="topic">Topic</string>
    <string name="listened">Listened</string>
    <string name="times">times</string>
    <string name="highest_score">highest score</string>
    <string name="practiced">Practiced</string>
    <string name="created_by">Created by</string>
    <string name="you">You</string>
    <string name="created_time">Created time</string>
    <string name="no_location_data">No location data</string>

    <!--Statistics screen-->
    <string name="statistics">Statistics</string>
    <string name="average_score">average score</string>
    <string name="completed">completed</string>
    <string name="uncompleted">uncompleted</string>

    <string name="noted">Noted</string>
    <string name="taken">Taken</string>
    <string name="collected">Collected</string>
    <string name="taken_found">Taken/found</string>
    <string name="photo_s">photo(s)</string>
    <string name="note_s">note(s)</string>
    <string name="flashcard_s">flashcard(s)</string>
    <string name="reviewed">Reviewed</string>
    <string name="played">Played</string>
    <string name="looked_up">Looked up</string>
    <string name="searched_photo">Searched photo</string>

    <string name="english_chinese_dictionary">en/cn dict</string>
    <string name="chinese_english_dictionary">cn/en dict</string>
    <string name="english_english_dictionary">en/en dict</string>


    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>
</resources>
